[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.19"
nom = "7.1.3"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "time", "net", "io-util", "macros"] }
